--- a/import-export/import-export.html
+++ b/import-export/import-export.html
@@ -25,7 +25,7 @@
             <p>
                 Exporting is used when you want to keep backup of Rich text file (RTF). 
                 Export all text to your device which you can later revoke here by importing.
-                File will be stored in downloads folder with name <span style="color: rgb(255, 196, 0);">TextEditorBackup.html</span> 
+                File will be stored in downloads folder with name <span class="exportName" style="color: rgb(255, 196, 0);">TextEditorBackup.html</span> 
                 You can open this file using any browser.
             </p>
             <div class="butn">
@@ -38,7 +38,7 @@
             <p>
                 Importing is used when you want edit existing file.
                 All imported items will be added on home page. 
-                You need to choose valid <span style="color: rgb(255, 196, 0);">TextEditorBackup.html</span>
+                You need to choose valid <span class="exportName" style="color: rgb(255, 196, 0);">TextEditorBackup.html</span>
                 to import items successfully.
             </p>
             <div class="butn">
