--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="shortcut icon" href="./Screenshot.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
+    <link rel="manifest" href="manifest.json">
     <title>Text Editor</title>
 </head>
 <body>
